--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<img class="logo" src="./src/imagens/Sem fundo.png" alt="logo Hera" />
 
 					<p class="descricao">
-						HORARÍO
+						HORÁRIO
 						JUVENIL E ADULTO
 						SEGUNDA,QUARTA E SEXTA
 						20H ÀS 22H
@@ -53,7 +53,8 @@
 						</p>
 						</P>
 						<p class="endereco">
-							Rua Alberto Barreto, 78 - Santo Aleixo, Jaboatão dos Guararapes - PE, 54120-050
+							Endereço:Rua Alberto Barreto, 78 - Santo Aleixo, Jaboatão dos Guararapes - PE, 54120-050
+							Ponto de Referência em Frente ao antigo Jeferson em cima da Academia de Levi
 						</p>
 						
 					</p>
