--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banner Rotativo</title>
+    <title>HERA BJJ</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="responsivo.css">
@@ -13,13 +13,17 @@
 
 </head>
 <body>
-    <p class="descricao">Hera BJJ HORÁRIO
+    <div class="informacoes">
+        <img class="selected" width="202" height="450" src="./src/image/0.jpeg" alt="image0">
+    </div>
+    <div class="map-responsive">
+    <!-- <p class="descricao">Hera BJJ HORÁRIO
         JUVENIL E ADULTO
         SEGUNDA,QUARTA E SEXTA
         20H ÀS 22H
         SÁBADOS
-        15H AS 17H MARQUE JÁ A SUA AULA EXPERIMENTAL</p>
-    <img class="logo" src="./src/image/Sem fundo.png" alt="logo Hera" />
+        15H AS 17H MARQUE JÁ A SUA AULA EXPERIMENTAL</p> -->
+        <img class="logo" src="./src/image/Sem fundo.png" alt="logo Hera" />
         <div id="slider">
         <img class="selected" width="320" height="210" src="./src/image/1.jpg" alt="image1">
         <img width="320" height="210" src="./src/image/2.jpg" alt="image2">
@@ -31,7 +35,7 @@
         <img  width="320" height="210" src="./src/image/8.jpeg" alt="image8">
         <img  width="320" height="210" src="./src/image/9.jpeg" alt="image9">
         <img  width="320" height="210" src="./src/image/10.jpeg" alt="image10">
-    </div>
+        </div>
     <div class="video">
         <iframe width="320" height="210" src="https://www.youtube.com/embed/videoseries?list=PL1kFM5WgYshOP82S5xTOGQBk2fzxwuYXM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <div class="video2">
@@ -50,11 +54,11 @@
                     <img src="./src/image/whatsapp-500.png" alt="ícone whatsapp" class="icone" />
                 </a>
             </li>
-            <!-- <li>
-                <a href="#" target="_blank">
-                    <img src="./src/imagens/facebook-500.png" alt="ícone facebook" class="icone" />
+            <li>
+                <a href="https://goo.gl/maps/Wtvyyckm5mwfCkTm8" target="_blank">
+                    <img src="./src/image/map.png" alt="ícone maps" class="icone"/>
                 </a>
-            </li> -->
+            </li>
             <li>
                 <a href="https://www.instagram.com/herajiujitsu/" target="_blank">
                     <img src="./src/image/instagram-500.png" alt="ícone instagram" class="icone" />
